# taf

./: .gitignore  conftest.py  main.py  pyproject.toml
base/: api_util.py  api_util_business.py
common/: assertions.py  debug_talk.py  read_yaml.py  recordlog.py  send_request.py
conf/: config.ini  operConfig.py  setting.py
mock_server/api_server/data/mockdata/: orderNumber.json
testcase/: conftest.py
testcase/business_interface/: businessCase.yaml  test_business_interface.py
testcase/interface/: addUser.yaml  login.yaml  test_01_login.py  test_debug_api.py  test_login.py  test_product.py
