[project]
name = "taf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.15.3",
    "configparser>=7.2.0",
    "jsonpath>=0.82.2",
    "pathlib>=1.0.1",
    "pytest>=9.0.2",
    "pytest-ordering>=0.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
